--- a/estilos.css
+++ b/estilos.css
@@ -57,7 +57,8 @@ display: inline-block;
 
 .reloj .segundos,
 .reloj .ampm{
-  font-size: 16px;
+  font-size: 20px;
   display: block;
+  margin-bottom: -5PX;
 
 }
